--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none # create 였는데 데이터 자꾸 생성해야해서 변경함
     properties:
       hibernate:
     # show_sql: true
